--- a/main.html
+++ b/main.html
@@ -7,7 +7,37 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<form>
+		<br>
+		<label for="name">Name</label>
+		<input type="text" id="name" placeholder="Name">
+		</br>
+		
+		<br>
+		<label for="phone">Phone Number</label>
+		<input type="text" id="phone" placeholder="Phone Number">
+		</br>
+		
+		<br>
+		<label for="address">Address</label>
+		<input type="text" id="address" placeholder="Address">
+		</br>
+		
+		<br>
+		<label for="checkbox">Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="checkbox" >
+		</br>
+		
+		<br>
+		<label for="multiSelect">Please select your preferred breeds</label>
+		<select type="select" id="multiSelect">
+			<option>labrador</option>
+			<option>Bull dog</option>
+			<option>pomelian</option>
+		</select>
+		<button type="submit" id="submit" value="submit">Submit</button>
+		</br>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
