--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
 			<option>Bull dog</option>
 			<option>pomelian</option>
 		</select>
-		<button type="submit" id="submit" value="submit">Submit</button>
+		<button type="submit" id="submit" value="Submit">Submit</button>
 		</br>
 	</form>
     <script type="text/javascript" src="./script.js">
