--- a/main.html
+++ b/main.html
@@ -24,8 +24,8 @@
 		</br>
 		
 		<br>
-		<label for="checkbox">Have you ever lived with a Dog before?</label>
-		<input type="checkbox" id="checkbox" >
+		<label for="checkbox" >Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?" >
 		</br>
 		
 		<br>
@@ -35,8 +35,8 @@
 			<option>Bull dog</option>
 			<option>pomelian</option>
 		</select>
-		<button type="submit" id="submit" value="Submit">Submit</button>
-		</br>
+		<input type="submit" id="submit" value="Submit" >
+	</br>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
